<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:visibility="visible">


    <ImageView
        android:id="@+id/google_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/google"
        android:contentDescription="@string/Google"/>

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/google_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="12dp"
        android:text="@string/name1"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/textview"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/Username_name"
        android:textColor="#000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/text"
        android:layout_width="290dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_alignStart="@+id/Username"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_alignLeft="@+id/Username"
        android:autofillHints="@string/Username_name"
        android:hint="@string/Username_name"
        android:inputType="text"
        android:layout_marginTop="256dp"
        android:layout_marginRight="80dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/rectangle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="286dp"
        android:text="@string/Password"
        android:textColor="#000"
        android:textStyle="bold" />

    <EditText
        android:layout_width="290dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="80dp"
        android:inputType="textPassword"
        android:autofillHints="@string/Password"
        android:hint="@string/Password"
        android:layout_marginRight="80dp"
        android:background="@drawable/rectangle"
        android:id="@+id/text1"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginBottom="284dp"
        android:text="@string/check_box_tittle" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/mybtn"
        android:text="@string/Sign_in"
        android:background="@drawable/button_border"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginBottom="220dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateAccount"
        android:layout_marginTop="480dp"
        android:layout_marginLeft="140dp"
        android:layout_marginStart="140dp"
        android:textColor="@color/colorAccent"/>


</RelativeLayout>









